examples/test/testpolicy6399.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6399
  namespace: namespace121
spec:
  podSelector:
    matchLabels:
      key0: value44
      key12: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value22
      podSelector:
        matchLabels:
          key39: value7
          key28: value40
